--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.5",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astropub/icons": "^0.2.0",
+    "@fontsource/geist-mono": "^5.0.3",
+    "@fontsource/iosevka": "^5.0.11",
     "astro": "^4.15.0",
-    "@astrojs/check": "^0.9.3",
+    "react-icons": "^5.3.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
